fixed collapsing nav bar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,10 +41,6 @@ img{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-#nav_id{
-    text-align: right
-}
-
 #footer_icon{
     color: darkgrey;
     margin-left: 10px;
